# snake_neuroevolution

./: README.md  Snake_NeuroEvolution.sln
Snake_NeuroEvolution/: CMakeLists.txt  Snake.cpp  Snake.h  Snake_Game.cpp  Snake_Game.h  Snake_NeuroEvolution.cpp  Snake_NeuroEvolution.vcxproj  Snake_NeuroEvolution.vcxproj.filters  stdafx.cpp  stdafx.h
